lender/tests/fail/manual_covariant_lending_invariant.stderr
error: lifetime may not live long enough
  --> tests/fail/manual_covariant_lending_invariant.rs:21:9
   |
17 |     fn _check_covariance<'long: 'short, 'short>(
   |                          -----          ------ lifetime `'short` defined here
   |                          |
   |                          lifetime `'long` defined here
...
21 |         lend
   |         ^^^^ associated function was supposed to return data with lifetime `'long` but it is returning data with lifetime `'short`
   |
   = help: consider adding the following bound: `'short: 'long`
   = note: requirement occurs because of the type `Cell<Option<&String>>`, which makes the generic argument `Option<&String>` invariant
   = note: the struct `Cell<T>` is invariant over the parameter `T`
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance

error: lifetime may not live long enough
  --> tests/fail/manual_covariant_lending_invariant.rs:36:9
   |
32 |     fn _check_covariance<'long: 'short, 'short>(
   |                          -----          ------ lifetime `'short` defined here
   |                          |
   |                          lifetime `'long` defined here
...
36 |         lend
   |         ^^^^ associated function was supposed to return data with lifetime `'long` but it is returning data with lifetime `'short`
   |
   = help: consider adding the following bound: `'short: 'long`
   = note: requirement occurs because of the type `Cell<Option<&String>>`, which makes the generic argument `Option<&String>` invariant
   = note: the struct `Cell<T>` is invariant over the parameter `T`
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance
